@@ -188,6 +188,8 @@ CDR
    linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
    etc are performed. Thus the peices of CDR can be grouped into multilegged sets.
  * Multiple files and formats can now be specified in cdr_custom.conf.
+ * cdr_syslog has been added which allows CDRs to be written directly to syslog.
+   See configs/cdr_syslog.conf.sample for more information.
 
 Calendaring for Asterisk
 ------------------------
